# fastapi-backend

./: .env.production  .eslintrc.json  .gitignore  LICENSE  alembic.ini  index.py  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  requirements.txt  store.ts  vercel.json
alembic/: vercel.json
api/: .env  auth_handler.py  database.py  env.py  follow_suggestions.py  index.py  models.py  requirements.txt  schemas.py
app/: page.tsx
backend/: auth_handler.py  database.py  main.py  models.py  pyproject.toml  vercel.json
backend/alembic/versions/: 084307f5fe94_new_db_structure.py  112d32d92166_create_table.py  56768df8753b_2nd_migration.py  69d4265a27b8_your_revision_message.py  773ccb2a0c8b_recreate_missing_migration.py  96b1ed4e6dc7_recreate_missing_migration.py  9ecad069eaac_merge_heads.py  a906740eb2ca_create_tables.py  bb19e891666b_add_hashed_owner_id_to_businesses.py
backend/marketplace_app/: .env  alembic.ini  auth_handler.py  database.py  hash_schema.py  main.py  models.py  pyproject.toml  schemas.py  unique_id.py
backend/marketplace_app/alembic/: env.py
backend/marketplace_app/alembic/versions/: 5e61aea1ddaf_initial_migration.py  9b69665eb060_add_ondelete_cascade_to_foreign_keys.py  c14731a71484_merge_branches.py  ce3af1327132_.py  d213d43e38da_initial_migration.py  e884eab6f236_add_owner_id_to_user_model.py
backend/marketplace_app/api/: index.py
backend/marketplace_app/routes/: api.py  auth.py  authentication.py  user.py
components/: business-card-compact.tsx  business-card.tsx  business-value-drawer.tsx  (+6 more)
(+94 files in other folders)
