[tool.poetry]
name = "markeplace-app"
version = "0.1.0"
description = ""
authors = ["Nikitas Tsoumas <tsoumasnikitas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic = {extras = ["email"], version = "^2.10.1"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
email-validator = "^2.2.0"
alembic = "^1.14.0"
jwt = "^1.3.1"
authlib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
